// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`React Hook Form Error Message should render correctly 1`] = `<DocumentFragment />`;

exports[`React Hook Form Error Message should render correctly with flat errors 1`] = `
<DocumentFragment>
  flat
</DocumentFragment>
`;

exports[`React Hook Form Error Message should render correctly with flat errors and as with string 1`] = `
<DocumentFragment>
  <span>
    object
  </span>
</DocumentFragment>
`;

exports[`React Hook Form Error Message should render correctly with nested errors array 1`] = `
<DocumentFragment>
  array
</DocumentFragment>
`;

exports[`React Hook Form Error Message should render correctly with nested errors array and as with component 1`] = `
<DocumentFragment>
  <span>
    array
  </span>
</DocumentFragment>
`;

exports[`React Hook Form Error Message should render correctly with nested errors object 1`] = `
<DocumentFragment>
  object
</DocumentFragment>
`;

exports[`React Hook Form Error Message should render correctly with nested errors object and as with component 1`] = `
<DocumentFragment>
  <span>
    object
  </span>
</DocumentFragment>
`;
